Regression: 'toggle visibility' mode of no longer works #116000

Closed
opened 2023-12-10 11:39:51 +01:00 by michael campbell · 6 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.58

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-09 00:52, hash: 76bf43f44d0c
Worked: (previous build of 4.1)

Short description of error
operator sculpt.face_set_change_visibility no longer works in 'toggle visibility' mode. It now hides the hovered face set instead of the un-hovered face sets.

I'm aware that the shortcut has changed, but that's not the issue.

Extremely problematic because it means you now have to hide one face set at a time which takes ages if you have a lot of face sets.

Exact steps for others to reproduce the error

  1. select cube
  2. press ctrl 5
  3. right click and convert to mesh
  4. go to sculpt mode and select the paint face sets tool
  5. draw 3 face sets
  6. hover over the one you want to keep and press Shift + H
  7. it will hide it, previous behavior was to hide the ones not hovered over.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.58 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-09 00:52, hash: `76bf43f44d0c` Worked: (previous build of 4.1) **Short description of error** operator sculpt.face_set_change_visibility no longer works in 'toggle visibility' mode. It now hides the hovered face set instead of the un-hovered face sets. I'm aware that the shortcut has changed, but that's not the issue. Extremely problematic because it means you now have to hide one face set at a time which takes ages if you have a lot of face sets. **Exact steps for others to reproduce the error** 1. select cube 2. press ctrl 5 3. right click and convert to mesh 4. go to sculpt mode and select the paint face sets tool 5. draw 3 face sets 6. hover over the one you want to keep and press `Shift + H` 7. it will hide it, previous behavior was to hide the ones not hovered over.
michael campbell added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-10 11:39:52 +01:00
Member

Hi, thanks for the report. Shortcut for toggle visibility has been changed to Shift H
Re: crash with mask enum option, I can confirm

Hi, thanks for the report. Shortcut for toggle visibility has been changed to `Shift H` Re: crash with mask enum option, I can confirm
Pratik Borhade added
Module
Sculpt, Paint & Texture
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-12-11 08:38:20 +01:00
Member

Crash likely introduced with 841864406f (unable to redo in earlier builds with hide_show operator)

Crash likely introduced with 841864406f1f204e3f23948a611d5df198f2ae46 (unable to redo in earlier builds with `hide_show` operator)
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-12-11 08:45:20 +01:00

Morning @PratikPB2123 , thanks. I'm aware the shortcut has changed, the issue is that it hides the face set under the mouse rather than the face sets that aren't under the mouse. Both H and shift H now do the same thing, even though they're both calling the correct operators.

Morning @PratikPB2123 , thanks. I'm aware the shortcut has changed, the issue is that it hides the face set under the mouse rather than the face sets that aren't under the mouse. Both H and shift H now do the same thing, even though they're both calling the correct operators.
Member

I see, toggle visibility is hiding the active face sets which is different than old behavior.
I've not bisected but I suspect 251069ae5b
cc @HooglyBoogly

I see, toggle visibility is hiding the active face sets which is different than old behavior. I've not bisected but I suspect 251069ae5b71efcc85b5177de40cc8dd60d8913a cc @HooglyBoogly
Pratik Borhade changed title from 'toggle visibility' mode of sculpt.face_set_change_visibility no longer works. hard crash when attempting to emulate with new paint.hide_show operator to Regression: 'toggle visibility' mode of no longer works 2023-12-11 10:16:57 +01:00
Member

Submitted new report for crash #116024

Submitted new report for crash #116024
Member

Following change will restore the old behavior of hiding all face sets except active when shift h (i.e. toggle visibility) is pressed:

diff --git a/source/blender/editors/sculpt_paint/sculpt_face_set.cc b/source/blender/editors/sculpt_paint/sculpt_face_set.cc
index b0bff9299bf..bfd858f635e 100644
--- a/source/blender/editors/sculpt_paint/sculpt_face_set.cc
+++ b/source/blender/editors/sculpt_paint/sculpt_face_set.cc
@@ -1028,7 +1028,7 @@ static int sculpt_face_set_change_visibility_exec(bContext *C, wmOperator *op)
       else {
         face_hide_update(object, nodes, [&](const Span<int> faces, MutableSpan<bool> hide) {
           for (const int i : hide.index_range()) {
-            hide[i] = face_sets[faces[i]] == active_face_set;
+            hide[i] = face_sets[faces[i]] != active_face_set;
           }
         });
       }
Following change will restore the old behavior of hiding all face sets except active when shift h (i.e. toggle visibility) is pressed: ```Diff diff --git a/source/blender/editors/sculpt_paint/sculpt_face_set.cc b/source/blender/editors/sculpt_paint/sculpt_face_set.cc index b0bff9299bf..bfd858f635e 100644 --- a/source/blender/editors/sculpt_paint/sculpt_face_set.cc +++ b/source/blender/editors/sculpt_paint/sculpt_face_set.cc @@ -1028,7 +1028,7 @@ static int sculpt_face_set_change_visibility_exec(bContext *C, wmOperator *op) else { face_hide_update(object, nodes, [&](const Span<int> faces, MutableSpan<bool> hide) { for (const int i : hide.index_range()) { - hide[i] = face_sets[faces[i]] == active_face_set; + hide[i] = face_sets[faces[i]] != active_face_set; } }); } ```
Pratik Borhade self-assigned this 2023-12-11 10:50:36 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-12 12:34:14 +01:00
Julien Kaspar added
Type
Bug
and removed
Type
Report
labels 2023-12-12 14:45:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116000
No description provided.