Fix #116000: Face set toggle visibility not working correctly

Toggle visibility is hiding active face sets instead of isoloating it.

Pull Request: https://projects.blender.org/blender/blender/pulls/116026